Copyright changes, build file tweaks (for examples), change build version to rc.1